--- a/index.html
+++ b/index.html
@@ -4,24 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Effective solutions for your business</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
     <header>
 
-        <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+        <nav class="nav">
+            <a class="logo header-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
+            <ul class="nav-list">
+                <li class="nav-item"><a class="nav-link" href="">Studio</a></li>
+                <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+                <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
             </ul>
         </nav>
 
-        <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <address class="contact">
+            <ul class="contact-list">
+                <li class="contact-item"><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="contact-item"><a class="contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
 
@@ -29,9 +33,9 @@
     
 
     <main>
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+        <section class="hero">
+            <h1 class="hero-heading">Effective Solutions for Your Business</h1>
+            <button class="hero-button" type="button">Order Service</button>
         </section>
 
         <!-- 4 points for improvement -->
@@ -66,36 +70,73 @@
         </section>
 
         <!-- Our Team -->
-        <section>
-            <h2>Our Team</h2>
-            <ul>
-                <li>
+        <section class="team">
+            <h2 class="team-heading">Our Team</h2>
+            <ul class="team-list">
+                <li class="team-item">
                     <img src="./images/img-3.jpg" alt="Makr Guerrero" width="264" height="260">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="team-item-heading">Mark Guerrero</h3>
+                    <p class="team-desc">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/img-2.jpg" alt="Tom Ford" width="264" height="260">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="team-item-heading">Tom Ford</h3>
+                    <p class="team-desc">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" height="260">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="team-item-heading">Camila Garcia</h3>
+                    <p class="team-desc">Marketing</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/img.jpg" alt="Daniel Wilson" width="264" height="260">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="team-item-heading">Daniel Wilson</h3>
+                    <p class="team-desc">UI Designer</p>
+                </li>
+            </ul>
+        </section>
+
+        <!-- Our Portfolio -->
+        <section class="partfolio">
+            <h2 class="partfolio-heading" id="portfolio">Our Portfolio</h2>
+            <ul class="partgolio-list">
+                <li class="partfolio-item">
+                    <img src="./images/portfolio-img-1.jpg" alt="Banking App" width="360" height="300"> 
+                    <h3 class="partfolio-item-heading">Banking App</h3>
+                    <p class="partfolio-desc">App</p>
+                </li>
+                <li class="partfolio-item">
+                    <img src="./images/portfolio-img-2.jpg" alt="Cashless Payment" width="360" height="300">
+                    <h3 class="partfolio-item-heading">Cashless Payment</h3>
+                    <p class="partfolio-desc">Marketing</p>
+                </li>
+                <li class="partfolio-item">
+                    <img src="./images/portfolio-img-3.jpg" alt="Laptop and phone" width="360" height="300">
+                    <h3 class="partfolio-item-heading">Meditation App</h3>
+                    <p class="partfolio-desc">App</p>
+                </li>
+                <li class="partfolio-item">
+                    <img src="./images/portfolio-img-4.jpg" alt="Taxi Service" width="360" height="300">
+                    <h3 class="partfolio-item-heading">Taxi Service</h3>
+                    <p class="partfolio-desc">Marketing</p>
+                </li>
+                <li class="partfolio-item">
+                    <img src="./images/portfolio-img-5.jpg" alt="Screen Illustrations" width="360" height="300">
+                    <h3 class="partfolio-item-heading">Screen Illustrations</h3>
+                    <p class="partfolio-desc">Design</p>
+                </li>
+                <li class="partfolio-item">
+                    <img src="./images/portfolio-img-6.jpg" alt="girl smiles and looks at the phone" width="360" height="300">
+                    <h3 class="partfolio-item-heading">Online Courses</h3>
+                    <p class="partfolio-desc">Marketing</p>
                 </li>
             </ul>
         </section>
     </main>
 
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>
+    <footer class="footer">
+        <a class="logo footer-logo" href="./index.html">Web <span class="logo-part">Studio</span></a>
+        <p class="footer-content">
             Increase the flow of customers and sales for your business with digital marketing &#38; growth solutions.
         </p>
     </footer>
