--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Effective solutions for your business</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -39,30 +44,30 @@
         </section>
 
         <!-- 4 points for improvement -->
-        <section>
-            <h2>4 points for improvement</h2>
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>
+        <section class="improv">
+            <h2 class="visually-hidden">4 points for improvement</h2>
+            <ul class="improv-list">
+                <li class="improv-item">
+                    <h3 class="improv-item-heading">Strategy</h3>
+                    <p class="improv-desc">
                         Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>        
                 </li>
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>
+                <li class="improv-item">
+                    <h3 class="improv-item-heading">Punctuality</h3>
+                    <p class="improv-desc">
                         Bring the key message to the brand's audience for the best price within the shortest possible time.
                     </p>
                 </li>
-                <li>
-                    <h3>Diligence</h3>
-                    <p>
+                <li class="improv-item">
+                    <h3 class="improv-item-heading">Diligence</h3>
+                    <p class="improv-desc">
                         Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
                     </p>
                 </li>
-                <li>
-                    <h3>Technologies</h3>
-                    <p>
+                <li class="improv-item">
+                    <h3 class="improv-item-heading">Technologies</h3>
+                    <p class="improv-desc">
                         Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                     </p>
                 </li>  
@@ -74,22 +79,22 @@
             <h2 class="team-heading">Our Team</h2>
             <ul class="team-list">
                 <li class="team-item">
-                    <img src="./images/img-3.jpg" alt="Makr Guerrero" width="264" height="260">
+                    <img class="team-image" src="./images/img-3.jpg" alt="Makr Guerrero" width="264" height="260">
                     <h3 class="team-item-heading">Mark Guerrero</h3>
                     <p class="team-desc">Product Designer</p>
                 </li>
                 <li class="team-item">
-                    <img src="./images/img-2.jpg" alt="Tom Ford" width="264" height="260">
+                    <img class="team-image" src="./images/img-2.jpg" alt="Tom Ford" width="264" height="260">
                     <h3 class="team-item-heading">Tom Ford</h3>
                     <p class="team-desc">Frontend Developer</p>
                 </li>
                 <li class="team-item">
-                    <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" height="260">
+                    <img class="team-image" src="./images/img-1.jpg" alt="Camila Garcia" width="264" height="260">
                     <h3 class="team-item-heading">Camila Garcia</h3>
                     <p class="team-desc">Marketing</p>
                 </li>
                 <li class="team-item">
-                    <img src="./images/img.jpg" alt="Daniel Wilson" width="264" height="260">
+                    <img class="team-image" src="./images/img.jpg" alt="Daniel Wilson" width="264" height="260">
                     <h3 class="team-item-heading">Daniel Wilson</h3>
                     <p class="team-desc">UI Designer</p>
                 </li>
@@ -101,32 +106,32 @@
             <h2 class="partfolio-heading" id="portfolio">Our Portfolio</h2>
             <ul class="partgolio-list">
                 <li class="partfolio-item">
-                    <img src="./images/portfolio-img-1.jpg" alt="Banking App" width="360" height="300"> 
+                    <img class="partfolio-image" src="./images/portfolio-img-1.jpg" alt="Banking App" width="360" height="300"> 
                     <h3 class="partfolio-item-heading">Banking App</h3>
                     <p class="partfolio-desc">App</p>
                 </li>
                 <li class="partfolio-item">
-                    <img src="./images/portfolio-img-2.jpg" alt="Cashless Payment" width="360" height="300">
+                    <img class="partfolio-image" src="./images/portfolio-img-2.jpg" alt="Cashless Payment" width="360" height="300">
                     <h3 class="partfolio-item-heading">Cashless Payment</h3>
                     <p class="partfolio-desc">Marketing</p>
                 </li>
                 <li class="partfolio-item">
-                    <img src="./images/portfolio-img-3.jpg" alt="Laptop and phone" width="360" height="300">
+                    <img class="partfolio-image" src="./images/portfolio-img-3.jpg" alt="Laptop and phone" width="360" height="300">
                     <h3 class="partfolio-item-heading">Meditation App</h3>
                     <p class="partfolio-desc">App</p>
                 </li>
                 <li class="partfolio-item">
-                    <img src="./images/portfolio-img-4.jpg" alt="Taxi Service" width="360" height="300">
+                    <img class="partfolio-image" src="./images/portfolio-img-4.jpg" alt="Taxi Service" width="360" height="300">
                     <h3 class="partfolio-item-heading">Taxi Service</h3>
                     <p class="partfolio-desc">Marketing</p>
                 </li>
                 <li class="partfolio-item">
-                    <img src="./images/portfolio-img-5.jpg" alt="Screen Illustrations" width="360" height="300">
+                    <img class="partfolio-image" src="./images/portfolio-img-5.jpg" alt="Screen Illustrations" width="360" height="300">
                     <h3 class="partfolio-item-heading">Screen Illustrations</h3>
                     <p class="partfolio-desc">Design</p>
                 </li>
                 <li class="partfolio-item">
-                    <img src="./images/portfolio-img-6.jpg" alt="girl smiles and looks at the phone" width="360" height="300">
+                    <img class="partfolio-image" src="./images/portfolio-img-6.jpg" alt="girl smiles and looks at the phone" width="360" height="300">
                     <h3 class="partfolio-item-heading">Online Courses</h3>
                     <p class="partfolio-desc">Marketing</p>
                 </li>
